# aig

./: .gitignore  CMakeLists.txt  README.md
aigmain/: aigmain.sln
aigmain/aigmain/: aigmain.vcxproj  aigmain.vcxproj.filters  dummy.cpp  dummy.h  game.cpp  game.h  game_impl.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  main.cpp  observer.h  observer_impl.h  physics.cpp  physics.h  pong.cpp  pong.h
